cabal-version:       2.4
Name:                org-parser
version:             0.1
Synopsis:            Parser and exporter for Org Mode documents.
Description:         todo

Maintainer:          lvr@s-viva.xyz
Bug-Reports:         https://github.com/lucasvreis/org-parser/issues
Copyright:           (c) 2022 lucasvreis
Category:            Text
Build-type:          Simple
Tested-With:         GHC == 8.10.7
data-dir:            templates
data-files:          **/*.tpl
Source-repository    head
  type:              git
  location:          git://github.com/lucasvreis/org-types.git

common common-options
  default-language:  Haskell2010
  build-depends:     base >= 4.9
                   , relude
                   , aeson
                   , bytestring
                   , citeproc >= 0.7
                   , containers
                   , filepath
                   , heist
                   , map-syntax
                   , megaparsec >= 9
                   , pandoc-types
                   , parser-combinators
                   , skylighting
                   , slugify
                   , stringsearch
                   , syb
                   , time >= 1.10
                   , text >= 1.2
                   , transformers >= 0.5
                   , xmlhtml
  mixins:            base hiding (Prelude)
                   , relude (Relude as Prelude)
                   , relude
  ghc-options:      -Wall
  default-extensions:
    TupleSections
    OverloadedStrings
    ViewPatterns
    MultiWayIf
    LambdaCase
    ScopedTypeVariables
    FlexibleContexts
    BlockArguments
    ConstraintKinds

library
  import:            common-options
  hs-source-dirs:    src
  exposed-modules:   Org.Types
                     Org.Builder
                     Org.Walk
                     Org.Parser
                     Org.Exporters.Heist
                     Org.Exporters.Citeproc
  other-modules:     Org.Parser.Common
                     Org.Parser.State
                     Org.Parser.Definitions
                     Org.Parser.Document
                     Org.Parser.Elements
                     Org.Parser.Objects
                     Org.Parser.MarkupContexts
                     Org.Data.Entities
                     Paths_org_parser
  autogen-modules:   Paths_org_parser

executable org-parser
  import:            common-options
  hs-source-dirs:    app
  main-is:           org-parser.hs
  build-depends:     org-parser
                   , optparse-applicative
  ghc-options:       -threaded

test-suite test
  import:            common-options
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src
                     test
  main-is:           test-org-parser.hs
  build-depends:     Diff
                   , tasty
                   , tasty-hunit
                   , neat-interpolation
                   , pretty-simple
                   , pretty
  other-modules:     Org.Types
                     Org.Builder
                     Org.Walk
                     Org.Exporters.Heist
                     Org.Exporters.Citeproc
                     Org.Parser.Document
                     Org.Parser.Elements
                     Org.Parser.Objects
                     Org.Parser.Common
                     Org.Parser.State
                     Org.Parser.Definitions
                     Org.Parser.MarkupContexts
                     Org.Data.Entities
                     Tests.Document
                     Tests.Objects
                     Tests.Elements
                     Tests.Helpers
                     Paths_org_parser
  ghc-options:      -threaded -with-rtsopts=-N
  default-extensions:
    QuasiQuotes
