cabal-version:       2.4
Name:                org-parser
version:             0.1
Synopsis:            Parser and exporter for Org Mode documents.
Description:         todo

Maintainer:          @lucasvreis
Bug-Reports:         https://github.com/lucasvreis/org-parser/issues
Copyright:           (c) 2022 lucasvreis
Category:            Text
Build-type:          Simple
Tested-With:         GHC == 8.10.7
data-dir:            templates
data-files:          **/*.tpl
Source-repository    head
  type:              git
  location:          git://github.com/lucasvreis/org-types.git

common common-options
  default-language:  Haskell2010
  build-depends:     base >= 4.14 && < 5
                   , aeson >= 1.4
                   , bytestring >= 0.10
                   , citeproc >= 0.7
                   , containers >= 0.6
                   , filepath >= 1.4
                   , heist-emanote >= 1.2.1
                   , map-syntax >= 0.3
                   , megaparsec >= 9.2
                   , pandoc-types >= 1.22
                   , relude >= 0.7
                   , slugify >= 0.1
                   , stringsearch >= 0.3
                   , syb >= 0.7
                   , text >= 1.2
                   , time >= 1.10
                   , xmlhtml >= 0.2
  mixins:            base hiding (Prelude)
                   , relude (Relude as Prelude)
                   , relude
  ghc-options:      -Wall
  default-extensions:
    TupleSections
    OverloadedStrings
    ViewPatterns
    ImportQualifiedPost
    MultiWayIf
    LambdaCase
    ScopedTypeVariables
    FlexibleContexts
    BlockArguments
    ConstraintKinds

library
  import:            common-options
  hs-source-dirs:    src
  exposed-modules:   Org.Types
                     Org.Builder
                     Org.Walk
                     Org.Parser
                     Org.Exporters.Common
                     Org.Exporters.Heist
                     Org.Exporters.Citeproc
  other-modules:     Org.Parser.Common
                     Org.Parser.State
                     Org.Parser.Definitions
                     Org.Parser.Document
                     Org.Parser.Elements
                     Org.Parser.Objects
                     Org.Parser.MarkupContexts
                     Org.Data.Entities
                     Paths_org_parser
  autogen-modules:   Paths_org_parser

executable org-parser
  import:            common-options
  hs-source-dirs:    app
  main-is:           org-parser.hs
  build-depends:     org-parser
                   , optparse-applicative >= 0.17
  ghc-options:       -threaded

test-suite test
  import:            common-options
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src
                     test
  main-is:           test-org-parser.hs
  build-depends:     Diff >= 0.4
                   , tasty >= 1.4
                   , tasty-hunit >= 0.10
                   , neat-interpolation >= 0.5
                   , pretty >= 1.1
                   , pretty-simple >= 4.1
  other-modules:     Org.Types
                     Org.Builder
                     Org.Walk
                     Org.Exporters.Common
                     Org.Exporters.Heist
                     Org.Exporters.Citeproc
                     Org.Parser.Document
                     Org.Parser.Elements
                     Org.Parser.Objects
                     Org.Parser.Common
                     Org.Parser.State
                     Org.Parser.Definitions
                     Org.Parser.MarkupContexts
                     Org.Data.Entities
                     Tests.Document
                     Tests.Objects
                     Tests.Elements
                     Tests.Helpers
                     Paths_org_parser
  ghc-options:      -threaded -with-rtsopts=-N
  default-extensions:
    QuasiQuotes
