cabal-version:       2.4
Name:                org-parser
version:             0.1
license:             GPL-3.0-only
Synopsis:            Parser and exporter for Org Mode documents.
Description:
  org-parser provides a parser and an HTML exporter for Org Mode documents.
  The Org document is parsed into an AST similar to org-element's, and the
  HTML exporter is highly configurable using HTML templates.

Maintainer:          @lucasvreis
Bug-Reports:         https://github.com/lucasvreis/org-parser/issues
Copyright:           (c) 2022 lucasvreis
Category:            Text
Build-type:          Simple
Tested-With:         GHC == 8.10.7 || == 9.0.2 || == 9.2.2
data-dir:            data
data-files:          **/*.tpl
                     **/*.html
Source-repository    head
  type:              git
  location:          git://github.com/lucasvreis/org-types.git

common common-options
  default-language:  Haskell2010
  build-depends:     base >= 4.14 && < 5
                   , aeson >= 1.4
                   , bytestring
                   , citeproc >= 0.7
                   , containers
                   , dir-traverse
                   , directory
                   , filepath
                   , ondim
                   , map-syntax
                   , megaparsec
                   , pandoc-types >= 1.22
                   , pandoc
                   , relude
                   , slugify
                   , text
                   , time
                   , xmlhtml
  mixins:            base hiding (Prelude)
                   , relude (Relude as Prelude)
                   , relude
  ghc-options:      -Wall
  default-extensions:
    TupleSections
    OverloadedStrings
    ViewPatterns
    ImportQualifiedPost
    MultiWayIf
    LambdaCase
    ScopedTypeVariables
    FlexibleContexts
    BlockArguments
    ConstraintKinds

library
  import:            common-options
  hs-source-dirs:    src
  exposed-modules:   Org.Types
                     Org.Builder
                     Org.Walk
                     Org.Parser
                     Org.Exporters.Common
                     Org.Exporters.HTML
                     Org.Exporters.Pandoc
                     Org.Exporters.Citeproc
                     Org.Parser.Definitions
                     Org.Parser.Document
                     Org.Parser.Elements
                     Org.Parser.Objects
                     Org.Data.Entities
  other-modules:     Org.Parser.Common
                     Org.Parser.State
                     Org.Parser.MarkupContexts
                     Paths_org_parser
  autogen-modules:   Paths_org_parser

executable org-parser
  import:            common-options
  hs-source-dirs:    app
  main-is:           org-parser.hs
  build-depends:     org-parser
                   , optparse-applicative >= 0.17
  ghc-options:      -threaded

test-suite test
  import:            common-options
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           test-org-parser.hs
  build-depends:     org-parser
                   , Diff >= 0.4
                   , tasty >= 1.4
                   , tasty-hunit >= 0.10
                   , neat-interpolation >= 0.5
                   , pretty >= 1.1
                   , pretty-simple >= 4.1
  other-modules:     Tests.Document
                     Tests.Objects
                     Tests.Elements
                     Tests.Helpers
  ghc-options:      -threaded -with-rtsopts=-N
  default-extensions:
    QuasiQuotes
