cabal-version: 3.6
name:          org-cli
version:       0.1
license:       GPL-3.0-only
synopsis:      CLI tool for exporting Org documents.
description:
  org-cli makes use of the org-parser and org-exporters libraries
  to provide a CLI tool for exporting Org documents. Its key features are
  parsing accuracy and easy customizability of many aspects of the exported
  document, using ondim templates.

maintainer:    @lucasvreis
bug-reports:   https://github.com/lucasvreis/org-mode-hs/issues
copyright:     (c) 2022 lucasvreis
category:      Text
build-type:    Simple
tested-with:   GHC ==9.2 || ==9.4

source-repository head
  type:     git
  location: git://github.com/lucasvreis/org-mode-hs.git

executable horg
  default-language:   Haskell2010
  hs-source-dirs:     app
  main-is:            org-cli.hs
  other-modules:      Options
  build-depends:
    , base                  >=4.15   && <4.19
    , directory
    , filepath
    , megaparsec
    , ondim
    , optparse-applicative  >=0.17.0 && <0.18
    , org-exporters
    , org-parser
    , pandoc
    , pretty-simple         >=4.1
    , relude

  ghc-options:        -Wall -threaded
  default-extensions:
    BlockArguments
    ConstraintKinds
    DeriveGeneric
    FlexibleContexts
    ImportQualifiedPost
    LambdaCase
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    ViewPatterns

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude
