cabal-version: 3.6
name:          org-exporters
version:       0.1
license:       GPL-3.0-only
synopsis:      Customizable exporter for Org Mode documents.
description:
  org-parser provides a parser and an HTML exporter for Org Mode documents.
  The Org document is parsed into an AST similar to org-element's, and the
  HTML exporter is highly configurable using HTML templates.

maintainer:    @lucasvreis
bug-reports:   https://github.com/lucasvreis/org-mode-hs/issues
copyright:     (c) 2022 lucasvreis
category:      Text
build-type:    Simple
tested-with:   GHC ==9.2 || ==9.4
data-dir:      data
data-files:
  **/*.html
  **/*.md
  **/*.tex
  **/*.tpl

source-repository head
  type:     git
  location: git://github.com/lucasvreis/org-mode-hs.git

flag latex
  default:     True
  description: Build with the LaTeX exporter module and its dependencies.

flag pandoc
  default:     True
  description: Build with the Pandoc exporter module and its dependencies.

flag skylighting
  default:     True
  description: Build with the skylighting syntax highlighting backend.

flag engrave-faces
  default:     False
  description:
    Build with the experimental engrave-faces syntax highlighting backend.

flag syntect
  default:     False
  description:
    Build with the experimental syntect syntax highlighting backend (requires a library).

library
  hs-source-dirs:     src
  exposed-modules:
    Org.Exporters.Citeproc
    Org.Exporters.Common
    Org.Exporters.Data.Templates
    Org.Exporters.HTML
    Org.Exporters.Processing
    Org.Exporters.Processing.GatherSettings
    Org.Exporters.Processing.InternalLinks
    Org.Exporters.Processing.OrgData
    Org.Exporters.Processing.Prune
    Org.Exporters.Processing.SpecialStrings

  other-modules:      Paths_org_exporters
  autogen-modules:    Paths_org_exporters
  default-language:   Haskell2010
  build-depends:
    , aeson
    , base          >=4.15   && <4.19
    , bytestring    >=0.11.4 && <0.12
    , citeproc      >=0.8.1  && <0.9
    , containers
    , file-embed
    , filepath      >=1.4.2  && <1.5
    , megaparsec
    , multiwalk
    , ondim
    , org-parser
    , pandoc-types  >=1.23   && <1.24
    , relude
    , slugify       >=0.1.0  && <0.2
    , text
    , time
    , uri-encode    >=1.5.0  && <1.6
    , xmlhtml       >=0.2.5  && <0.3

  if flag(latex)
    exposed-modules: Org.Exporters.LaTeX

  if flag(pandoc)
    build-depends:   pandoc
    exposed-modules: Org.Exporters.Pandoc

  if flag(skylighting)
    build-depends:
      , skylighting
      , skylighting-core
      , skylighting-format-blaze-html

    exposed-modules: Org.Exporters.Highlighting.Skylighting

  if flag(engrave-faces)
    build-depends:   process
    exposed-modules: Org.Exporters.Highlighting.EngraveFaces

  if flag(syntect)
    exposed-modules: Org.Exporters.Highlighting.Syntect
    extra-libraries: syntectffi
    extra-lib-dirs:  /home/lucas/.local/lib/syntectffi/release

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  ghc-options:        -Wall
  default-extensions:
    BlockArguments
    ConstraintKinds
    DeriveGeneric
    FlexibleContexts
    ImportQualifiedPost
    LambdaCase
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    ViewPatterns
