cabal-version:   3.0
name:            org-parser
version:         0.1.0.0
license:         GPL-3.0-only
synopsis:        Parser for Org Mode documents.
description:
  org-parser provides a parser for Org Mode documents.
  The Org document is parsed into an AST similar to org-element's, and
  aims to be accurate and performant where possible. The types have
  'multiwalk' instances that allow traversing and querying the AST, as well
  as ordering the AST semantically by its leaf text. It also features a
  test suite comparing it with org-element against many corner cases.

maintainer:      @lucasvr:matrix.org
author:          Lucas V. R.
bug-reports:     https://github.com/lucasvreis/org-mode-hs/issues
copyright:       (c) 2022 lucasvreis
category:        Text
build-type:      Simple
tested-with:     GHC ==9.2 || ==9.4

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: git://github.com/lucasvreis/org-mode-hs.git

common common-options
  default-language:   Haskell2010
  build-depends:
    , aeson               >=2.1.2  && <2.2
    , base                >=4.15   && <4.19
    , containers          >=0.6.5  && <0.7
    , megaparsec          >=9.3.0  && <9.4
    , multiwalk           >=0.3.0  && <0.4
    , relude              >=1.2.0  && <1.3
    , replace-megaparsec  >=1.4.5  && <1.5
    , text                >=1.2.5  && <2.1
    , time                >=1.11.1 && <1.13

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  ghc-options:        -Wall
  default-extensions:
    BlockArguments
    ConstraintKinds
    DeriveGeneric
    FlexibleContexts
    ImportQualifiedPost
    LambdaCase
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    ViewPatterns

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Org.Builder
    Org.Compare
    Org.Data.Entities
    Org.Parser
    Org.Parser.Document
    Org.Parser.Elements
    Org.Parser.Objects
    Org.Types
    Org.Walk

  other-modules:
    Org.Parser.Common
    Org.Parser.Definitions
    Org.Parser.MarkupContexts
    Org.Parser.State

test-suite test
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            test-org-parser.hs
  build-depends:
    , Diff                >=0.4  && <0.5
    , neat-interpolation  >=0.5  && <0.6
    , org-parser
    , pretty              >=1.1  && <1.2
    , pretty-simple       >=4.1  && <4.2
    , tasty               >=1.4  && <1.5
    , tasty-hunit         >=0.10 && <0.11

  other-modules:
    Tests.Document
    Tests.Elements
    Tests.Helpers
    Tests.Objects

  ghc-options:        -threaded -with-rtsopts=-N
  default-extensions: QuasiQuotes
